# cookie-monster-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  memory.x  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
common/: Cargo.toml
common/src/: animations.rs  input.rs  lib.rs  signal.rs
common/src/animations/: carrousel.rs  double_carrousel.rs  forward_wave.rs  multi_color_fade_in.rs  multi_color_front_to_back_wave.rs  multi_color_heartbeat.rs  multi_color_solid.rs  multi_color_solid_random.rs  multi_color_sparkle.rs  multi_color_strand.rs  shimmer.rs  uni_color_fade_in.rs  uni_color_front_to_back_wave.rs  uni_color_heartbeat.rs  uni_color_solid.rs  uni_color_sparkle.rs
microbit_v2/: Cargo.toml  README.md  build.rs  wiring.drawio
microbit_v2/.cargo/: config.toml
microbit_v2/src/: input.rs  led.rs  main.rs
microbit_v2/src/animations/: carrousel.rs  double_carrousel.rs  forward_wave.rs  mod.rs  multi_color_fade_in.rs  multi_color_heartbeat.rs  multi_color_solid.rs  multi_color_solid_random.rs  multi_color_sparkle.rs  multi_color_strand.rs  uni_color_fade_in.rs  uni_color_front_to_back_wave.rs  uni_color_heartbeat.rs  uni_color_solid.rs  uni_color_sparkle.rs
microbit_v2_embassy/: Cargo.toml  Embed.toml
microbit_v2_embassy/.cargo/: config.toml
microbit_v2_embassy/src/: input.rs  led.rs  main.rs
quinled-dig-quad/: Cargo.toml  build.rs
quinled-dig-quad/src/: main.rs
quinled_dig_quad/: Cargo.toml  README.md  build.rs  wiring.drawio
quinled_dig_quad/.cargo/: config.toml
quinled_dig_quad/src/: controls.rs  input.rs  led.rs  main.rs  signal.rs
src/: main.rs
src/animations/: carrousel.rs  double_carrousel.rs  forward_wave.rs  mod.rs  multi_color_fade_in.rs  multi_color_heartbeat.rs  multi_color_hearthbeat.rs  multi_color_solid.rs  multi_color_solid_random.rs  multi_color_sparkle.rs  multi_color_strand.rs  solid.rs  uni_color_fade_in.rs  uni_color_front_to_back_wave.rs  uni_color_heartbeat.rs  uni_color_hearthbeat.rs  uni_color_solid.rs  uni_color_sparkle.rs
src/controls/: mod.rs
src/cookie_monster/: mod.rs
src/effects/: mod.rs
