[workspace]
resolver = "3"
members = [
    "common",
    "microbit_v2",
    "quinled_dig_quad",
]

[workspace.dependencies]
cookie-monster-common = { path = "./common" }
defmt = "1.0.1"
ws2812-spi = "0.5.0"

[profile.dev]
lto = true
opt-level = 3

[profile.release]
# LLVM can perform better optimizations using a single thread
codegen-units = 1
debug = true
lto = true
opt-level = 3
