[workspace]
resolver = "3"
members = [
    "common",
    "microbit_v2",
    "quinled_dig_quad",
]

[workspace.dependencies]
cookie-monster-common = { path = "./common" }
defmt = "1.0.1"
embedded-hal = "1.0.0"
rand = { version = "0.9.1", default-features = false, features = ["small_rng"] }
smart-leds = "0.4.0"
smart-leds-trait = "0.3.1"
ws2812-spi = "0.5.1"

[profile.dev]
lto = true
opt-level = 3

[profile.release]
# LLVM can perform better optimizations using a single thread
codegen-units = 1
debug = true
lto = true
opt-level = 3
