[workspace]
resolver = "3"
members = [
    "common",
    "microbit_v2",
    "quinled_dig_quad",
]

[workspace.dependencies]
cookie-monster-common = { path = "./common" }
defmt = "1.0.1"
embassy-executor = { version = "0.7.0", features = ["defmt", "task-arena-size-65536"] }
embassy-time = "0.4.0"
embedded-hal-async = "1.0.0"
rand = { version = "0.9.1", default-features = false, features = ["small_rng"] }
ws2812-spi = "0.5.1"

[workspace.metadata.release]
allow-branch = ["main"]
pre-release-commit-message = "Release {{version}}"
# Do not publish any of the workspace crates
publish = false
shared-version = true
tag-prefix = ""

[profile.dev]
lto = true
opt-level = 3

[profile.release]
# LLVM can perform better optimizations using a single thread
codegen-units = 1
debug = true
lto = true
opt-level = 3
