[package]
name = "cookie-monster-common"
version = "0.1.0"
authors = ["Alex Payment <3332420+AlexPayment@users.noreply.github.com>"]
edition = "2024"
description = "Common code for Cookie Monster"
repository = "https://github.com/AlexPayment/cookie-monster-rs/"
license = "MIT"
publish = false

[dependencies]
defmt = { workspace = true }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
rand = { workspace = true }
smart-leds = { workspace = true }
smart-leds-trait = { workspace = true }
ws2812-spi = { workspace = true }
