[package]
name = "cookie-monster-common"
version = "1.0.1"
authors = ["Alex Payment <3332420+AlexPayment@users.noreply.github.com>"]
edition = "2024"
description = "Common code for Cookie Monster"
repository = "https://github.com/AlexPayment/cookie-monster-rs/"
license = "MIT"
publish = false

[dependencies]
defmt = { workspace = true }
embassy-sync = "0.7.0"
embassy-time = { workspace = true }
embedded-hal = "1.0.0"
embedded-hal-async = { workspace = true }
rand = { workspace = true }
smart-leds = "0.4.0"
smart-leds-trait = "0.3.1"
ws2812-spi = { workspace = true }

[package.metadata.release]
shared-version = true
