[package]
name = "cookie-monster-common"
version = "2.0.0"
authors = ["Alex Payment <3332420+AlexPayment@users.noreply.github.com>"]
edition = "2024"
description = "Common code for Cookie Monster"
repository = "https://github.com/AlexPayment/cookie-monster-rs/"
license = "MIT"
publish = false

[dependencies]
defmt = { workspace = true }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-sync = "0.8.0"
embassy-time = { workspace = true }
embedded-hal-async = { workspace = true }
rand = { workspace = true }
smart-leds = "0.4.0"
smart-leds-trait = "0.3.2"

[package.metadata.release]
shared-version = true
