[package]
name = "cookie-monster-microbit-v2"
version = "0.1.0"
authors = ["Alex Payment <3332420+AlexPayment@users.noreply.github.com>"]
edition = "2024"
description = "Binary for Cookie Monster running on the micro:bit V2 (nRF52833, Cortex-M4 with FPU)"
repository = "https://github.com/AlexPayment/cookie-monster-rs/"
license = "MIT"
publish = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.2"
embedded-hal = "1.0.0"
microbit-v2 = "0.15.1"
nrf52833-hal = "0.18.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }
smart-leds = "0.4.0"
smart-leds-trait = "0.3.1"
ws2812-spi = "0.5.0"
