[package]
name = "cookie-monster-quinled-dig-quad"
version = "0.1.0"
authors = ["Alex Payment <3332420+AlexPayment@users.noreply.github.com>"]
edition = "2024"
description = "Binary for Cookie Monster running on the QuinLED-Dig-Quad (ESP32-WROOM-32E)"
repository = "https://github.com/AlexPayment/cookie-monster-rs/"
license = "MIT"
publish = false

[dependencies]
cookie-monster-common = { workspace = true }
defmt = { workspace = true }
esp-backtrace = { version = "0.15.1", features = ["defmt", "esp32", "exception-handler", "panic-handler"] }
