[package]
name = "cookie-monster-quinled-dig-quad"
version = "0.1.0"
authors = ["Alex Payment <3332420+AlexPayment@users.noreply.github.com>"]
edition = "2024"
description = "Binary for Cookie Monster running on the QuinLED-Dig-Quad (ESP32-WROOM-32E)"
repository = "https://github.com/AlexPayment/cookie-monster-rs/"
license = "MIT"
publish = false

[dependencies]
cookie-monster-common = { workspace = true }
defmt = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { features = ["defmt", "defmt-timestamp-uptime", "generic-queue-8"], workspace = true }
embedded-hal-async = { workspace = true }
esp-backtrace = { version = "0.16.0", features = ["defmt", "esp32", "exception-handler", "panic-handler"] }
esp-hal = { version = "1.0.0-beta.1", features = ["defmt", "esp32", "unstable"] }
esp-hal-embassy = { version = "0.8.1", features = ["esp32"] }
esp-println = { version = "0.14.0", features = ["defmt-espflash", "esp32"] }
nb = "1.1.0"
rand = { workspace = true }
ws2812-spi = { workspace = true }

[package.metadata.release]
shared-version = true
