[package]
name = "cookie-monster-quinled-dig-quad"
version = "1.1.0"
authors = ["Alex Payment <3332420+AlexPayment@users.noreply.github.com>"]
edition = "2024"
description = "Binary for Cookie Monster running on the QuinLED-Dig-Quad (ESP32-WROOM-32E)"
repository = "https://github.com/AlexPayment/cookie-monster-rs/"
license = "MIT"
publish = false

[dependencies]
cookie-monster-common = { workspace = true }
defmt = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embedded-hal-async = { workspace = true }
esp-backtrace = { version = "0.19.0", features = ["defmt", "esp32", "panic-handler"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32"] }
esp-hal = { version = "1.1.1", features = ["defmt", "esp32", "unstable"] }
esp-hal-smartled2 = { version = "0.28.2", features = ["defmt", "esp32"] }
esp-println = { version = "0.17.0", features = ["defmt-espflash", "esp32"] }
esp-rtos = { version = "0.3.0", features = ["defmt", "embassy", "esp32"] }
nb = "1.1.0"
rand = { workspace = true }
rgb = { version = "0.8.53", default-features = false }
smart-leds-trait = "0.3.2"
ws2812-spi = { workspace = true }

[package.metadata.release]
shared-version = true
